content and styling of brewing-sca.html

--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -98,14 +98,16 @@
 
 	<div class="container">
 		<div class="row no-gutters">
-			<div class="col-10 offset-1">
+			<div class="col-12">
 				<p class="uppercase text-center name-accordion">Brewing SCA</p>
+                <p class="text-accordion">Learn about the variety of methods for brewing coffee and the brewing variables that affect quality.</p>
+                <p class="text-accordion">This module provides hands-on learning on grinding, brewing methods, measuring coffee strength and charting a coffee’s extraction.</p>
 				<div id="accordion">
 					<div class="card card-accordion">
 						<div class="card-header header-accordion">
 							<a class="card-link" data-toggle="collapse" href="#collapseone">
 								<div class="text-center">
-									<i class="fas fa-coins fa-2x"></i>
+									<i class="fas fa-coins"></i>
 									<p>SCA Points</p>
 							</a>
 						</div>
@@ -122,17 +124,19 @@
 					<div class="card-header header-accordion">
 						<a class="collapsed card-link" data-toggle="collapse" href="#collapsetwo">
 							<div class="text-center">
-								<i class="fas fa-sitemap fa-2x"></i>
+								<i class="fas fa-sitemap"></i>
 								<p>Overview</p>
 						</a>
 					</div>
 				</div>
 				<div id="collapsetwo" class="collapse" data-parent="#accordion">
 					<div class="card-body body-accordion">
-						<p>Brewing guidelines for industry standard coffee.</p>
-						<p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p>
-                        <p>Look at different brewing methods and methodology for V60, Chemex, AeroPress and more.</p>
-                        <p>Apply method based on grind size</p>
+                    <ul>
+						<li><p>Brewing guidelines for industry standard coffee.</p></li>
+						<li><p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p></li>
+                        <li><p>Look at different brewing methods and methodology for V60, Chemex, AeroPress and more.</p></li>
+                        <li><p>Apply method based on grind size</p></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
@@ -141,7 +145,7 @@
 				<div class="card-header header-accordion">
 					<a class="collapsed card-link" data-toggle="collapse" href="#collapsethree">
 						<div class="text-center">
-							<i class="fas fa-chart-line fa-2x"></i>
+							<i class="fas fa-chart-line"></i>
 							<p>Experience</p>
 					</a>
 				</div>
@@ -158,7 +162,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsefour">
 				<div class="text-center">
-					<i class="fas fa-money-bill-alt fa-2x"></i>
+					<i class="fas fa-money-bill-alt"></i>
 					<p>Cost</p>
 			</a>
 		</div>
@@ -174,7 +178,7 @@
 		<div class="card-header header-accordion">
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsesix">
 				<div class="text-center">
-					<i class="fas fa-envelope-open-text fa-2x"></i>
+					<i class="fas fa-envelope-open-text"></i>
 					<p>More Info</p>
 			</a>
 		</div>
@@ -183,7 +187,7 @@
 		<div class="card-body">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-10 offset-1">
+					<div class="col-12">
 						<div class="text-center">
 							<h3 class="uppercase form-heading">Get in touch</h3>
 							<p>We're here to help you find the courses that work for you.</p>
