styling to quotes container

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+                    <div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
                             <li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
@@ -75,6 +76,7 @@
 								</a>
 							</li>
 						</ul>
+                        </div>
 				</div>
 		</nav>
 
@@ -299,7 +301,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image">
 								<div class="carousel-caption">
-									<p>"Feedback from our customers has been very positive", Oxmantown.</p>
+									<p>"Best coffee around!", Oxmantown.</p>
 								</div>
 							</div>
 						</div>
@@ -307,7 +309,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
 								<div class="carousel-caption">
-									<p>"Coffee Project Co. always with us every step of the way", BIBI's.</p>
+									<p>"Coffee Project Co. is top notch coffee", BIBI's.</p>
 								</div>
 							</div>
 						</div>
@@ -315,7 +317,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
 								<div class="carousel-caption">
-									<p>"Coffee Project Co. is exceptional quality coffee", Forest Ave.</p>
+									<p>"Exceptional quality coffee", Forest Ave.</p>
 								</div>
 							</div>
 						</div>
@@ -335,26 +337,30 @@
 			</div>
 		</div>
 	</div>
+    </div>
 
 	<!-- quotes -->
 
 	<div class="container quotes-container">
 		<div class="row no-gutters">
 			<div class="col-10 offset-1">
-				<h3 class="text-center uppercase my-5">What our students are saying...</h3>
+            <div class="text-center"><i class="far fa-comments fa-5x my-3"></i>
+				<h3 class="text-center uppercase mb-4">What our students are saying...</h3>
 			</div>
+            </div>
 		</div>
-		<div class="row no-gutters">
+		<div class="row no-gutters quote-media">
 			<div class="col-10 offset-1 col-lg-3">
 				<div class="media">
 					<div class="d-none d-sm-block">
-						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 						<div class="media-body">
 							<blockquote class="blockquote">
-								<p> "I got a job within a week. Really recommended!"</p>
+                            <div class="text-center"><i class="far fa-thumbs-up d-md-none d-lg-block"></i>
+								<p> "The perfect course! I absolutely loved every minute of it."</p>
 								<div class="d-none d-sm-block">
-									<p> (Luis Angel) </p>
+									<p> (Luis Angel) </p><div>
 								</div>
 							</blockquote>
 						</div>
@@ -363,13 +369,14 @@
 				<div class="col-10 offset-1 col-lg-3">
 					<div class="media">
 						<div class="d-none d-sm-block">
-							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 							<div class="media-body">
 								<blockquote class="blockquote">
-									<p> "The perfect course! I absolutely loved every minute of it."</p>
+                                <div class="text-center"><i class="far fa-thumbs-up d-md-none d-lg-block"></i>
+									<p> "I got a job within a week. Really recommended!"</p>
 									<div class="d-none d-sm-block">
-										<p> (Molly Brady)</p>
+										<p> (Molly Brady)</p></div>
 									</div>
 								</blockquote>
 							</div>
@@ -378,15 +385,17 @@
 					<div class="col-10 offset-1 col-lg-3">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2" height=100 width=100>
+								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
+                                    <div class="text-center"><i class="far fa-thumbs-up d-md-none d-lg-block"></i>
 										<p> "I invested in myself and it has already paid off!"</p>
 										<div class="d-none d-sm-block">
-											<p> (Dan Smullen)</p>
+											<p> (Dan Smullen)</p></div>
 										</div>
 									</blockquote>
+
 								</div>
 							</div>
 						</div>
@@ -399,7 +408,7 @@
 					<div class="row no-gutters">
 						<div class="col-12">
                         <div class="text-center">
-							<h3 class="form-heading uppercase mt-3">Stay updated </h3>
+							<h3 class="form-heading uppercase my-4">Stay updated </h3>
                             <i class="fas fa-mail-bulk fa-5x"></i>
                             <p class="my-3">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
 							</div>
