added registration form to intro.html

--- a/intro.html
+++ b/intro.html
@@ -176,7 +176,7 @@
 			<a class="collapsed card-link" data-toggle="collapse" href="#collapsesix">
 				<div class="text-center">
 					<i class="fas fa-envelope-open-text"></i>
-					<p>More Info</p>
+					<p>Registration</p>
 			</a>
 		</div>
 	</div>
@@ -187,20 +187,12 @@
 					<div class="col-12">
 						<div class="text-center">
 							<h3 class="uppercase form-heading">Get in touch</h3>
-							<p>We're here to help you find the courses that work for you.</p>
-                            <p>Contact our <em>education team</em> by submitting a message below.</p>
-							<p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
+							<p>We are here to help you find the courses that work for you.</p>
+                            <p>Get in touch with our <em>education team</em> by submitting a pre registration for any of our courses below.</p>
+                            <a class="btn btn-lg" href="https://form.jotformeu.com/92816922928368" target="_blank" role="button" style="color:#fff; background-color: #fe5f55;">Pre-Register Here</a>
+                            <p><small>Alternatively please register your interest at hi@coffeeproject.ie</small>
 							</p>
 						</div>
-						<form>
-							<input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-							<input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-							<textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-							<div class="form-row text-center">
-								<div class="col">
-									<button type="submit" class="btn my-button my-border">Send message</button>
-								</div>
-						</form>
 					</div>
 				</div>
 			</div>
