changes to forms, moved quotes to contact.html

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -103,6 +103,61 @@
         </div>
         </div>
 
+<div class="container">
+<div class="row">
+<div class="col-sm-12 col-md-4">
+<div class="card border-0">
+<figure class="itemside">
+	<div class="aside">
+		<div class="img-wrap bg-warning"><i class="fas fa-coffee fa-5x"></i></div>
+	</div>
+	<figcaption class="text-wrap">
+		<h6 class="title mt-3">One request, many offers </h6>
+		<a href="#">Good link</a>
+	</figcaption>
+</figure>
+</div>
+</div>
+
+
+<div class="col-sm-12 col-md-4">
+<div class="card border-0">
+<figure class="itemside">
+	<div class="aside">
+		<div class="img-wrap img-sm bg-warning"><i class="center-xy fa-3x fa fa-users white"></i></div>
+	</div>
+	<figcaption class="text-wrap">
+		<h6 class="title mt-3">One request, many offers </h6>
+		<a href="#">Good link</a>
+	</figcaption>
+</figure>
+</div>
+</div>
+<div class="col-sm-12 col-md-4">
+<div class="card border-0">
+<figure class="itemside">
+	<div class="aside">
+		<div class="img-wrap img-sm bg-warning"><i class="center-xy fa-3x fa fa-users white"></i></div>
+	</div>
+	<figcaption class="text-wrap">
+		<h6 class="title mt-3">One request, many offers </h6>
+		<a href="#">Good link</a>
+	</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+
+
+<!-- card.// -->
+
+
+
+
+
+
+
         <!-- main media objects -->
 
 
