--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image">
 								<div class="carousel-caption">
-									<p>"Feedback from our customers has been very positive", Oxmantown.</p>
+									<p>"Best coffee around", Mugs.</p>
 								</div>
 							</div>
 						</div>
@@ -166,15 +166,15 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
 								<div class="carousel-caption">
-									<p>"Coffee Project Co. always with us every step of the way", BIBI's.</p>
+									<p>"Top notch coffee!", Urbun.</p>
 								</div>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<div class="img-centering d-flex justify-content-center">
-								<img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
+								<img src="./assets/images/carousel3.jpg" alt="2Beans Image">
 								<div class="carousel-caption">
-									<p>"Coffee Project Co. is exceptional quality coffee", Forest Ave.</p>
+									<p>"Exceptional quality", 2Beans.</p>
 								</div>
 							</div>
 						</div>
@@ -195,96 +195,70 @@
 		</div>
 	</div>
 
-	<!-- quotes -->
+<!-- quotes -->
 
 	<div class="container quotes-container">
 		<div class="row no-gutters">
-			<div class="col-10 offset-1">
-				<h3 class="text-center uppercase my-5">What our students are saying...</h3>
+			<div class="col-12">
+            <div class="text-center"><i class="far fa-comments fa-5x my-3"></i>
+				<h3 class="text-center uppercase mb-4">What our students are saying...</h3>
 			</div>
+            </div>
 		</div>
-		<div class="row no-gutters">
-			<div class="col-10 offset-1 col-lg-3">
+        <div class="container media-quotes">
+		<div class="row no-gutters quote-media">
+			<div class="col-12 col-lg-4">
 				<div class="media">
 					<div class="d-none d-sm-block">
-						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 						<div class="media-body">
 							<blockquote class="blockquote">
-								<p> "I got a job within a week. Really recommended!"</p>
-								<div class="d-none d-sm-block">
-									<p> (Luis Angel) </p>
+                            <div><i class="far fa-thumbs-up"></i>
+								<p> "Perfect course! I absolutely loved every minute of it."</p>
+								<div class="d-none d-sm-block d-md-none d-lg-block">
+									<p> (Luis Angel) </p><div>
 								</div>
 							</blockquote>
 						</div>
 					</div>
 				</div>
-				<div class="col-10 offset-1 col-lg-3">
+				<div class="col-12 col-lg-4">
 					<div class="media">
 						<div class="d-none d-sm-block">
-							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 							<div class="media-body">
 								<blockquote class="blockquote">
-									<p> "The perfect course! I absolutely loved every minute of it."</p>
-									<div class="d-none d-sm-block">
-										<p> (Molly Brady)</p>
+                                <div><i class="far fa-thumbs-up"></i>
+									<p> "I got a job within a week. Really recommended!"</p>
+									<div class="d-none d-sm-block d-md-none d-lg-block">
+										<p> (Molly Brady)</p></div>
 									</div>
 								</blockquote>
 							</div>
 						</div>
 					</div>
-					<div class="col-10 offset-1 col-lg-3">
+					<div class="col-12 col-lg-4">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2" height=100 width=100>
+								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
               </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
+                                    <div><i class="far fa-thumbs-up "></i>
 										<p> "I invested in myself and it has already paid off!"</p>
-										<div class="d-none d-sm-block">
-											<p> (Dan Smullen)</p>
+										<div class="d-none d-sm-block d-md-none d-lg-block">
+											<p> (Dan Smullen)</p></div>
 										</div>
 									</blockquote>
+
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- form -->
-
-				<div class="container signup-container">
-					<div class="row no-gutters">
-						<div class="col-10 offset-1">
-                        <div class="text-center mb-1">
-							<h3 class="form-heading uppercase mb-0">Stay updated </h3>
-                            <i class="fas fa-mail-bulk fa-5x"></i>
-                            </div>
-                            <p style="color: #003333;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
-							<hr class="section-divider">
-                            <form>
-								<div class="form-group">
-									<label for="exampleInputEmail1">Email address</label>
-									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-									<small id="emailHelp" class="form-text text-muted">*We promise not to share with third parties.</small>
-								</div>
-								<div class="form-group">
-									<label for="password">Password</label>
-									<input type="password" class="form-control" id="password" placeholder="Password">
-                                </div>
-									<div class="form-group">
-										<label for="repeatPassword">Repeat Password</label>
-										<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
-                                    </div>
-                                        <div class="text-center">
-										<button type="submit" class="btn my-button">Submit</button>
-                                        </div>
-							</form>
-                            </div>
-                            </div>
-                            </div>
-
+                </div>
 
 <!-- footer -->
 
