--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 		<!-- jumbotron hero image -->
 
-		<div class="container landing-container">
+		<div class="container landing-container px-0">
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="jumbotron">
@@ -106,244 +106,100 @@
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="quote-landing">
-						<p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short,
+						<p class="quote mx-1"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short,
 							enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
 					</div>
 				</div>
 			</div>
             </div>
-		<div class="container my-4">
+		<div class="container my-4 px-0">
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="about text-center">
-						<h2>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
-							world.</h2>
-						<p>We currently supply fresh roasted coffee to order to 200+ venues nationwide.</p>
+						<h4>Coffee Project Co. is a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
+							world.</h4>
 					</div>
 				</div>
 			</div>
 		</div>
 
-	<!-- coffees -->
 
-	<div class="container headers-landing">
-		<div class="row no-gutters">
-			<div class="col-12">
-				<img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
-				<p class="ph-landing uppercase">coffees</p>
-			</div>
-		</div>
-	</div>
+	<!-- what we do -->
+<div class="landing pb-5">
+	<div class="container cards-landing-container text-center">
+<h2 class="uppercase our-story pt-5">Our story</h2>
+<div class="cards-landing-heading">
+<p>Brian is Australian and first learn to barist and roast in Sydndey.</p>
+<p>In 2008 he married his Irish wife, Sophie and moved back to Ireland to set up a roastery in a shed overlooking Blackwater Valley.</p>
+<p>They built a new roastery and green bean store in 2013</p>
+<p><em>...and the rest is history!</em></p>
+</div>
+</div>
 
-	<!-- cards for coffees section -->
 
-	<div class="container coffees-text my-4">
-		<div class="row no-gutters">
-			<div class="col-12">
-				<p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
+<div class="row cards-landing-row">
+  <div class="col-12 col-md-4 cards-landing-column">
+    <h2 class="uppercase text-center cards-h2">coffees</h2>
+    <img src="./assets/images/landing1.png" class="cards-landing-img my-border" alt="coffee plant icon image" style="width:100%">
+    <div class="cards-landing-text">
+    <p>At Coffee Project Co. we travel all across the globe to meet with farmers, importers and exporters sourcing the freshest seasonal coffees for our customers.</p>
+    </div>
+   <button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">Read+</button>
+   <div id="collapse1" class="collapse collapse-landing">
+    <p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
 				<p>As we bring in coffee beans from exotic lands around the world, we test out different roasting times
 					so we know how best to present them to you so you get the perfect balance of acidity, body and
 					aroma. Each batch has its own unique roasted qualities.</p>
-				<p>You can browse all of our latest wholesale coffees online <a href="coffees.html" class="linkcoffees">
+				<p>You can browse all of our latest wholesale coffees online <a href="coffees.html">
 						here</p></a>
+  </div>
+  </div>
 
-
-			</div>
-		</div>
-	</div>
-
-
-	<!-- sca courses -->
-
-
-	<div class="container headers-landing">
-		<div class="row no-gutters">
-			<div class="col-12">
-				<img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
-				<p class="ph-landing uppercase">courses</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="sca-section px-0">
-
-		<div class="container">
-			<div class="row no-gutters">
-				<div class="col-12 d-inline-flex justify-content-center my-4">
-					<img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200>
-            </div>
-				</div>
-			</div>
-
-        <div class="container px-0">
-        <div class="row no-gutters">
-		<div class="sca col-12">
-			<p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
+  <div class="col-12 col-md-4 cards-landing-column">
+  <h2 class="uppercase text-center cards-h2">courses</h2>
+    <img src="./assets/images/landing2.png" class="cards-landing-img my-border" alt="barista icon image" style="width:100%">
+    <div class="cards-landing-text">
+    <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere.</p>
+    </div>
+<button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">Read+</button>
+  <div id="collapse2" class="collapse collapse-landing">
+    <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
 				baristas and coffee professionals everywhere</p>
-			<p>SCA is a controlled and certified education system with a curriculum written and updated by the best
-				coffee experts in the coffee industry.</p>
 			<p>The program allows you to complete courses in six subject modules and three levels of certifications,
 				amassing course credits that count towards the 100 points needed to gain SCA internationally recognized
 				Coffee Diploma.</p>
 			<p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points.</p>
-			<div class="text-center">
-				<a href="intro.html" class="btn my-button my-border sca-button">Start here</a>
-			</div>
-		</div>
-	</div>
-	</div>
+				<p>Start<a href="intro.html"> here</a><p>
+  </div>
+  </div>
+
+  <div class="col-12 col-md-4 cards-landing-column">
+  <h2 class="uppercase text-center cards-h2">brewing</h2>
+    <img src="./assets/images/landing3.png" class="cards-landing-img my-border" alt="book and coffee cup icon image" style="width:100%">
+<div class="cards-landing-text">
+    <p>You’ve got your well sourced and roasted coffee beans. You’ve got a solid, reliable coffee grinder and you’ve got a brewing device? Now it’s time for the magic.</p>
     </div>
+<button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">Read+</button>
+  <div id="collapse3" class="collapse collapse-landing">
+    <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
+       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
+       <p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
 
-	<!-- brew guides -->
+			<p>Browse our guides <a href="brewing.html"> here</a></p>
 
-	<div class="container headers-landing mt-4">
-		<div class="row no-gutters">
-			<div class="col-12">
-				<img src="./assets/images/brewing.jpg" alt="brewing vesels image" class="brewguides-img">
-				<p class="ph-landing">brewing</p>
-			</div>
-		</div>
-	</div>
-	<br>
-	<br>
+  </div>
+  </div>
 
-	<!-- brewing cards -->
+</div>
 
-	<div class="container">
-		<div class="row no-gutters">
-			<div class="col text-center">
-				<h3>Great coffee is useless without great brewing.</h3>
-				<p>We do half the work, now it’s your turn.</p>
-				<hr class="section-divider">
-				<p>Learn how to brew a perfect cup at home...</p>
-				<p>(Don’t be afraid to experiment either!)</p>
-				<p>Click on each method below to learn more.</p>
-				<p><strong>You are welcome!</strong></p>
-			</div>
-		</div>
-	</div>
-
-	<!-- brew cards/links to downloadable pdfs -->
-
-	<div class="container">
-		<div class="card-columns d-inline-flex justify-content-center">
-			<div class="row no gutters">
-
-				<div class="col-6 col-md-3">
-					<div class="card">
-						<div class="card-body text-center brew-cards">
-							<a href="aeropress.html">Aeropress
-								<img src="./assets/images/aeropress.png" alt="aeropress icon" class="card-img"></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-6 col-md-3">
-					<div class="card">
-						<div class="card-body text-center brew-cards">
-							<a href="cafetiere.html">Cafetiere
-								<img src="./assets/images/french-press.png" alt="cafetiere icon" class="card-img"></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-6 col-md-3">
-					<div class="card">
-						<div class="card-body text-center brew-cards">
-							<a href="chemex.html">Chemex
-								<img src="./assets/images/chemex.png" alt="chemex icon" class="card-img"></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-6 col-md-3">
-					<div class="card">
-						<div class="card-body text-center brew-cards">
-							<a href="espresso.html">Espresso
-								<img src="./assets/images/espresso-machine.png" alt="espresso machine icon" class="card-img"></a>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<!-- carousel -->
-
-	<div class="container">
-		<div class="row no-gutters">
-			<div class="col">
-				<h3 class="text-center uppercase my-5">What our customers are saying...</h3>
-			</div>
-		</div>
-	</div>
+</div>
+</div>
 
 
-	<div class="container carousel-container">
-		<div class="row no-gutters">
-			<div class="col">
+<hr class="section-divider">
+<!-- form -->
 
-				<div id="testimonialscarousel" class="carousel slide" data-ride="carousel">
-
-					<!-- indicators -->
-
-					<ul class="carousel-indicators">
-						<li data-target="#testimonialscarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#testimonialscarousel" data-slide-to="1"></li>
-						<li data-target="#testimonialscarousel" data-slide-to="2"></li>
-					</ul>
-
-					<!-- slides -->
-
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<div class="img-centering d-flex justify-content-center">
-								<img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image">
-								<div class="carousel-caption">
-									<p>"Best coffee around!", Oxmantown.</p>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="img-centering d-flex justify-content-center">
-								<img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
-								<div class="carousel-caption">
-									<p>"Coffee Project Co. is top notch coffee", BIBI's.</p>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="img-centering d-flex justify-content-center">
-								<img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
-								<div class="carousel-caption">
-									<p>"Exceptional quality coffee", Forest Ave.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<!-- controls -->
-
-
-					<a class="carousel-control-prev" href="#testimonialscarousel" data-slide="prev">
-						<span class="carousel-control-prev-icon"></span>
-					</a>
-					<a class="carousel-control-next" href="#testimonialscarousel" data-slide="next">
-						<span class="carousel-control-next-icon"></span>
-					</a>
-				</div>
-
-			</div>
-		</div>
-	</div>
-    </div>
-
-
-
-				<!-- form -->
-
-				<div class="container signup-container">
+				<div class="container signup-container mt-3">
 					<div class="row no-gutters">
 						<div class="col-12">
                         <div class="text-center">
@@ -448,6 +304,8 @@
 			</div>
 		</div>
 	</footer>
+
+
 							<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 								integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 								crossorigin="anonymous"></script>
