fixing typos im coffees.html

--- a/coffees.html
+++ b/coffees.html
@@ -81,7 +81,7 @@
 
   </header>
 
-  <!-- main beans section -->
+  <!-- main coffees section -->
 
   <div class="container main-container">
     <div class="container headers-landing">
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <div class="container coffees-container">
+  <div class="container coffees-container mt-2">
   <div class="row no-gutters">
   <div class="col coffee-text">
     <p>We carefully source and choose our coffee offerings to represent the uniqueness of each origin.</p>
@@ -106,12 +106,12 @@
 
   <!-- cards for beans section -->
 
-  <div class="container mt-5">
+  <div class="container mt-3">
     <div class="card-deck">
       <div class="row no-gutters">
 
         <div class="col-10 offset-1 col-lg-4">
-          <div class="card" style="border-radius: 0.25rem;">
+          <div class="card my-border mb-4">
           <div class="card-single">
             <div class="card-header">
               <h4 class="uppercase text-center">Single Origin</h4>
@@ -127,13 +127,13 @@
 
         <div class="col-10 offset-1 col-lg-4">
 
-          <div class="card">
+          <div class="card my-border mb-4">
             <div class="card-header">
               <h4 class="uppercase text-center">Blends</h4>
             </div>
             <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
             <div class="card-body">
-              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
+              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we really love trying and we know you'll enjoy what we create.</p>
               <div class="text-center"><a href="coffees-blends.html" class="btn my-button">Read more</a></div>
             </div>
           </div>
@@ -150,9 +150,9 @@
 					<div class="col-12">
 						<div class="text-center">
 							<h3 class="uppercase form-heading">Place your order now!</h3>
-							<p>Remember that shipping is free on orders over EUR 30</p>
+							<p>Remember that your shipping is free on orders over EUR 30.</p>
                             <a class="btn btn-lg" href="https://form.jotformeu.com/92817292835366" target="_blank" role="button" style="color:#fff; background-color: #fe5f55;">Order Here</a>
-                            <p><small>Ships same day if order pleaced before 2pm.</small>
+                            <p><small>Ships same day if order placed before 2pm.</small>
 							</p>
 						</div>
 					</div>
