content to README.md

--- a/brewing.html
+++ b/brewing.html
@@ -77,8 +77,6 @@
 				</div>
 		</nav>
 
-
-
   </header>
 
   <!-- brew guides -->
@@ -173,6 +171,7 @@
 
 </div>
 
+<!-- brewing tips -->
 
   <hr class="section-divider">
 
@@ -209,12 +208,15 @@
           <p>Just right?</p>
           </div>
         </ul>
-
-
-
       </div>
     </div>
   </div>
+
+<!-- back button -->
+
+    <div class="text-center">
+        <a href="index.html" class="btn my-button my-border">Back</a>
+        </div>
 
 <!-- footer -->
 
