--- a/coffees-single.html
+++ b/coffees-single.html
@@ -276,7 +276,7 @@
         </div>
     </div>
 
-
+<!-- back button -->
 
     <div class="text-center">
         <a href="coffees.html" class="btn my-button my-border">Back</a>
