--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
 
 	<!-- what we do -->
+
 <div class="landing pb-5">
 	<div class="container cards-landing-container text-center">
 <h2 class="uppercase our-story pt-5">Our story</h2>
@@ -197,6 +198,7 @@
 
 
 <hr class="section-divider">
+
 <!-- form -->
 
 				<div class="container signup-container mt-3">
@@ -205,9 +207,9 @@
                         <div class="text-center">
 							<h3 class="form-heading uppercase my-4">Stay updated </h3>
                             <i class="fas fa-mail-bulk fa-5x"></i>
-                            <p class="my-3">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
+                            <p class="my-3" style="font-weight: bold;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
 							</div>
-                            <hr class="section-divider">
+
                             <form>
 								<div class="form-group signup-form ">
 									<label for="exampleInputEmail1">Email address</label>
