added back button to brewing.html

--- a/brewing.html
+++ b/brewing.html
@@ -98,10 +98,10 @@
   <div class="container brewing-div">
  <div class="container">
    <div class="row no-gutters">
-     <div class="col-12 pt-4">
+     <div class="col-12 py-4 px-4 text-center">
        <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
-       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
-       <p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
+       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a button.</p>
+       <p>The growing trend for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
      </div>
    </div>
  </div>
@@ -113,12 +113,13 @@
 		<div class="row no-gutters">
 			<div class="col text-center">
 				<h3>Great coffee is useless without great brewing.</h3>
-				<p>We do half the work, now it’s your turn.</p>
-				<hr class="section-divider">
-				<p>Learn how to brew a perfect cup at home...</p>
+				<p>Learn how to brew a perfect cup at home...we do half the work, now it’s your turn.</p>
+                <hr class="section-divider">
 				<p>(Don’t be afraid to experiment either!)</p>
-				<p>Click on each method below to learn more.</p>
-				<p><strong>You are welcome!</strong></p>
+				<p style="font-weight: bold;">Click on each method below to learn more.</p>
+                <p><strong>-You are welcome!-</strong></p>
+                <p class="text-center"><i class="fas fa-hand-point-down fa-3x"></i></p>
+
 			</div>
 		</div>
 	</div>
@@ -179,15 +180,15 @@
     <div class="row no-gutters">
       <div class="col bluefont">
         <h3>Handy filter coffee brewing tips</h3>
-        <p class="uppercase">Buy fresh, grind fresh</p>
+        <p class="uppercase" style="font-weight: bold;">Buy fresh, grind fresh</p>
         <ul>
             <div id="water" name="water">
-          <li class="uppercase">use good water</li>
+          <li class="uppercase" style="font-weight: bold;">use good water</li>
           <p>Water is the main ingredient in your coffee so can have a big impact on taste. Always use filtered water, especially if you live in a hard water area (or try bottled water). Make sure the water is the same temperature each time you brew - just off the boil is fine, or if you have a thermometer, try aiming for 95°.</p>
           <p>
             </div>
             <div id="measure" name="measure">
-          <li class="uppercase">Measure your coffee</li>
+          <li class="uppercase" style="font-weight: bold;">Measure your coffee</li>
           <p>Measure your coffee and water as accurately as you can - ideally by weighing both. You can use an ordinary kitchen scales, but if you want more precision then try these specialised brewing scales.</p>
           <p>We recommend:</p>
           <ul>
@@ -197,12 +198,12 @@
           </ul>
             </div>
             <div id="method" name="method">
-          <li class="uppercase">Follow one method</li>
+          <li class="uppercase" style="font-weight: bold;">Follow one method</li>
           <p>Try and brew your coffee the same way every time you make it - brew for the same length of time, at the same temperature, in the same way.</p>
           <p>That way the only things you need to change are the amount of coffee (for strength), and the grind size (for flavour).</p>
             </div>
             <div id="grind" name="grind">
-          <li id="grind" class="uppercase">Nail your grind size</li>
+          <li id="grind" class="uppercase" style="font-weight: bold;">Nail your grind size</li>
           <p>Once you’ve made your coffee, taste it! Is it: Weak, thin, sour, light? Grind finer next time.</p>
           <p>Too strong, bitter, dry, burnt tasting? Grind coarser next time.</p>
           <p>Just right?</p>
