minor fixes to brewing.html

--- a/brewing.html
+++ b/brewing.html
@@ -93,31 +93,17 @@
     </div>
   <br>
 
-  <!-- brew cards/links to downloadable pdfs -->
-
-  <div class="container brewing-div">
- <div class="container">
-   <div class="row no-gutters">
-     <div class="col-12 py-4 px-4 text-center">
-       <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
-       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a button.</p>
-       <p>The growing trend for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
-     </div>
-   </div>
- </div>
-
-
 <!-- brewing cards -->
 
+    <div class="container wrapper-brewing py-4">
 	<div class="container">
 		<div class="row no-gutters">
 			<div class="col text-center">
 				<h3>Great coffee is useless without great brewing.</h3>
 				<p>Learn how to brew a perfect cup at home...we do half the work, now it’s your turn.</p>
+                <p>(Don’t be afraid to experiment either!)</p>
                 <hr class="section-divider">
-				<p>(Don’t be afraid to experiment either!)</p>
 				<p style="font-weight: bold;">Click on each method below to learn more.</p>
-                <p><strong>-You are welcome!-</strong></p>
                 <p class="text-center"><i class="fas fa-hand-point-down fa-3x"></i></p>
 
 			</div>
@@ -169,14 +155,14 @@
 			</div>
 		</div>
 	</div>
+<p class="text-center pt-4"><strong>You are welcome!</strong></p>
+</div>
 
 </div>
 
 <!-- brewing tips -->
 
-  <hr class="section-divider">
-
-      <div class="container">
+<div class="container mt-4">
     <div class="row no-gutters">
       <div class="col bluefont">
         <h3>Handy filter coffee brewing tips</h3>
@@ -200,7 +186,7 @@
             <div id="method" name="method">
           <li class="uppercase" style="font-weight: bold;">Follow one method</li>
           <p>Try and brew your coffee the same way every time you make it - brew for the same length of time, at the same temperature, in the same way.</p>
-          <p>That way the only things you need to change are the amount of coffee (for strength), and the grind size (for flavour).</p>
+          <p>That way the only things you need to change are the amount of coffee (for strength) and the grind size (for flavour).</p>
             </div>
             <div id="grind" name="grind">
           <li id="grind" class="uppercase" style="font-weight: bold;">Nail your grind size</li>
