--- a/espresso.html
+++ b/espresso.html
@@ -86,7 +86,7 @@
 <div class="container headers-landing">
       <div class="row">
         <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
           <p class="ph-landing">Brewing</p>
         </div>
       </div>
@@ -161,7 +161,7 @@
         <div class="row">
             <div class="col">
                 <p class="brewing-download">Want to download it as pdf?</p>
-                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
