--- a/aeropress.html
+++ b/aeropress.html
@@ -85,7 +85,7 @@
 <div class="container headers-landing">
       <div class="row">
         <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
           <p class="ph-landing">Brewing</p>
         </div>
       </div>
