--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							the world</p>
 						<hr class="section-divider">
 						<p>SCA accredited training courses to suit all skill levels!<a href="intro.html"
-								class="badge badge-light">New</a></p>
+								class="badge badge-landing">New</a></p>
 					</div>
 				</div>
 			</div>
@@ -197,15 +197,13 @@
 </div>
 
 
-<hr class="section-divider">
-
-<!-- form -->
+<!-- sign up -->
 
 				<div class="container signup-container mt-3">
 					<div class="row no-gutters">
 						<div class="col-12">
                         <div class="text-center">
-							<h3 class="form-heading uppercase my-4">Stay updated </h3>
+							<h3 class="form-heading uppercase my-4 my-border py-4">Stay updated </h3>
                             <i class="fas fa-mail-bulk fa-5x"></i>
                             <p class="my-3" style="font-weight: bold;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
 							</div>
