--- a/coffees-single.html
+++ b/coffees-single.html
@@ -85,7 +85,7 @@
         <div class="container headers-landing">
             <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcoffees-img">
+                    <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
                     <p class="ph-landing uppercase">single origin</p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
         <div class="row no-gutters">
 
 
-        <div class="col">
+        <div class="col single-text my-4 mx-2">
         <p>The term single origin is essentially as it sounds - it means that the beans come from one place only, usually from a certain region or country. Single origin coffees may even be harvested from the same farm or estate.</p>
         <p>Given that they are sourced from one place only, single origin coffees tend to be available exclusively at certain times of year, contingent on the growing season of the geographical location from which they were derived.</p>
         </div>
@@ -106,7 +106,7 @@
 
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Colombia</h4>
@@ -140,7 +140,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Ethiopia</h4>
@@ -174,7 +174,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/papanewguinea-icon.png" alt="papa new guinea icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Papa New Guinea</h4>
@@ -208,7 +208,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Puerto Rico</h4>
@@ -242,7 +242,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Tanzania</h4>
@@ -281,6 +281,14 @@
     <div class="text-center">
         <a href="coffees.html" class="btn my-button my-border">Back</a>
         </div>
+
+ <!-- link to order form -->
+
+ <div class="text-center">
+        <p>Or you can place your order<a href="https://form.jotformeu.com/92817292835366" style="text-decoration: none; font-size: 1.5rem; font-weight: bold; color: #e7717d;" target="_blank"> here</p></a>
+        </div>
+
+    <hr class="section-divider">
 
 <!-- footer -->
 
