--- a/coffees.html
+++ b/coffees.html
@@ -94,13 +94,12 @@
     </div>
   </div>
 
-  <div class="container coffees-container mt-2">
+  <div class="container coffees-container mt-4">
   <div class="row no-gutters">
   <div class="col coffee-text">
     <p>We carefully source and choose our coffee offerings to represent the uniqueness of each origin.</p>
-    <p>Then, we roast and blend based on two main philosophies: to preserve and highlight the natural characteristics of the original coffee bean and to ensure that a cup of <em>Coffee Project Co.</em> beans coffee will always taste as good as it smells.</p>
-    <p>We lean towards medium-light roasts that bring out a smoother and sweeter taste experience.</p>
-  </div>
+    <p>Then, we roast and blend based on two main philosophies: to preserve and highlight the natural characteristics of the original bean and to ensure that a cup of <em>Coffee Project Co.</em> beans coffee will always taste as good as it smells.</p>
+    </div>
 
   </div></div>
 
