--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -85,7 +85,7 @@
         <div class="container headers-landing">
             <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcoffees-img">
+                    <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
                     <p class="ph-landing uppercase">blends</p>
                 </div>
             </div>
@@ -93,11 +93,7 @@
 
         <div class="container">
         <div class="row no-gutters">
-        <div class="col d-inline-flex justify-content-center mt-2">
-        <h2>What are coffee blends?</h2>
-        </div>
-        </div>
-        <div class="col">
+              <div class="col single-text my-4 mx-2">
         <p>When coffee beans from multiple locations are roasted and mixed together, this is known as a coffee blend.</p>
         <p>It is not uncommon to find coffee blends including beans from nine separate places, although in our roastery we typically use beans from around two to four different locations.</p>
         </div>
@@ -108,7 +104,7 @@
 
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Project Co. Blend</h4>
@@ -142,7 +138,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Red Rock</h4>
@@ -176,7 +172,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/indonesia-icon.png" alt="indonesia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Moka Java Blend</h4>
@@ -211,7 +207,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">French Roast</h4>
@@ -245,7 +241,7 @@
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media my-border my-2 p-3">
+                <div class="media-coffees my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Breakfast Blend</h4>
@@ -279,8 +275,16 @@
         </div>
     </div>
 
+<!-- back button -->
+
     <div class="text-center">
-        <a href="coffees.html" class="btn my-button my-border">Back</a>
+        <a href="coffees.html" class="btn btn-lg my-button my-border">Back</a>
+        </div>
+
+ <!-- order button -->
+
+ <div class="text-center">
+        <a class="btn btn-lg" href="https://form.jotformeu.com/92817292835366" target="_blank" role="button" style="color:#fff; background-color: #fe5f55;">Order Here</a>
         </div>
 
 <!-- footer -->
