fixing contact.html links

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,6 @@
             </div>
         </div>
     </div>
-    <hr class="section-divider">
 
     <!-- heading text -->
 
@@ -214,7 +213,7 @@
               </div>
 						<div class="media-body">
 							<blockquote class="blockquote">
-                            <div><i class="far fa-thumbs-up"></i>
+                            <div><i class="far fa-thumbs-up" aria-hidden="true"></i>
 								<p> "Perfect course! I absolutely loved every minute of it."</p>
 								<div class="d-none d-sm-block d-md-none d-lg-block">
 									<p> (Luis Angel) </p><div>
