--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="cards-landing-text">
     <p>At Coffee Project Co. we travel all across the globe to meet with farmers, importers and exporters sourcing the freshest seasonal coffees for our customers.</p>
     </div>
-   <div style="text-align: center;"><button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">Read+</button></div>
+   <div style="text-align: center;"><button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">Read more on coffees</button></div>
    <div id="collapse1" class="collapse collapse-landing">
     <p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
 				<p>As we bring in coffee beans from exotic lands around the world, we test out different roasting times
@@ -162,7 +162,7 @@
     <div class="cards-landing-text">
     <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere.</p>
     </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">Read+</button></div>
+<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">Read more on courses</button></div>
   <div id="collapse2" class="collapse collapse-landing">
     <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
 				baristas and coffee professionals everywhere</p>
@@ -180,7 +180,7 @@
 <div class="cards-landing-text">
     <p>You’ve got your well sourced and roasted coffee beans. You’ve got a solid, reliable coffee grinder and you’ve got a brewing device? Now it’s time for the magic.</p>
     </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">Read+</button></div>
+<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">Read more on brewing</button></div>
   <div id="collapse3" class="collapse collapse-landing">
     <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
        <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
@@ -196,6 +196,7 @@
 </div>
 </div>
 
+<hr class="section-divider">
 
 <!-- sign up -->
 
@@ -203,7 +204,7 @@
 					<div class="row no-gutters">
 						<div class="col-12">
                         <div class="text-center">
-							<h3 class="form-heading uppercase my-4 my-border py-4">Stay updated </h3>
+							<h3 class="form-heading uppercase my-4 py-4">Stay updated </h3>
                             <p class="my-3" style="font-weight: bold;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
                             <i class="fas fa-mail-bulk fa-5x"></i>
 							</div>
